[package]
name = "sol-probe"
version = "0.1.0"
authors = ["Charles Chege<charleschege@protonmail.ch>"]
edition = "2018"
license = "Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_path_to_error = "0.1.5"
smol = "1.2.5"
surf = "2.3.1"
